---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 22. 08. 2025
  Changes:
    - Changed rocket silo setting default to off (unchecked) due to the 'send to orbit automatically' setting being reset on upgrades, and added some info to the tooltip.
  Bugfixes:
    - Fixed machines losing their flipped status when their quality is changed
    - Machines marked for deconstruction are no longer targets for quality change events
      Thank you Stargateur for finding these issues!
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 21. 08. 2025
  Features:
    - Added the ability to turn off assemblers and furnaces as upgrade targets.
      They are still used to generate upgrade attempts for other entities, they are just
      not a target for upgrades themselves.
    - Added fine control over each entity that can change quality (in startup settings)
  Optimizations:
    - Refactored code to improve readability and remove some unecessary complexity
    - Cached frequently accessed storage fields for minor performance improvement
  Changes:
    - Updated the machine inspection output to be easier to understand
  Bugfixes:
    - Removed cargo landing pad as a target for quality changes (containers aren't supported yet)
---------------------------------------------------------------------------------------------------
Version: 1.2.8
Date: 21. 08. 2025
  Modding:
    - Enhanced compatability with other mods by excluding non-selectable and indestructible entities
      from quality changes
---------------------------------------------------------------------------------------------------
Version: 1.2.7
Date: 21. 08. 2025
  Modding:
    - Excludes entities from Miniloader Redux mod to prevent compatibility issues with belt-connected entities
      Broken miniloaders will be removed from the players save to prevent crashes (sorry Xaal!!)