@@ -36,7 +36,6 @@ enable-power-switches=Power Switches
 enable-radar=Radar
 enable-reactors=Reactors
 enable-roboports=Roboports
-enable-rocket-silos=Rocket Silos
 enable-solar-panels=Solar Panels
 enable-thrusters=Space Thrusters
 enable-turrets=Turrets
@@ -74,7 +73,6 @@ enable-power-switches=Enable quality changes for power switches.
 enable-radar=Enable quality changes for radar stations.
 enable-reactors=Enable quality changes for nuclear reactors.
 enable-roboports=Enable quality changes for roboports.
-enable-rocket-silos=Enable quality changes for rocket silos (default off).\n\n[color=yellow]Warning:[/color] Upgrading a rocket silo will reset the 'send to orbit automatically' setting. I haven't found a way to preserve this setting through the modding API yet.
 enable-solar-panels=Enable quality changes for solar panels.
 enable-thrusters=Enable quality changes for space thrusters.
 enable-turrets=Enable quality changes for turrets.\n\nIncludes: ammo turrets, laser turrets, flamethrowers, artillery turrets.
