@@ -2,7 +2,8 @@
 Version: 1.3.1
 Date: 22. 08. 2025
   Changes:
-    - Changed rocket silo setting default to off (unchecked) due to the 'send to orbit automatically' setting being reset on upgrades, and added some info to the tooltip.
+    - Removed support for rocket silos due to the 'send to orbit automatically' setting being reset on upgrades.
+      Once a way can be found to manage this via API they will be added back in.
   Bugfixes:
     - Fixed machines losing their flipped status when their quality is changed
     - Machines marked for deconstruction are no longer targets for quality change events
